# lbmflow

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  SPEC_NOTES_T18_1.md  TESTING_NOTES.md
.codex/: hooks.json
.github/workflows/: ci.yml
bench/: history.csv
bench/baselines/: m5-max-sandbox.json  m5-max.json
bench/results/: m5-max-latest.json  m5-max-sandbox-latest.json
crates/lbm-cli/: Cargo.toml
crates/lbm-cli/examples/: stirred_tank_3d.rs  vv_sedim_2d.rs  vv_slosh_2d.rs
crates/lbm-cli/examples/dispersed_seeding/: README.md  SPEC_FINDINGS.md  main.rs  particles.rs  protocol.rs  readout.rs  reservoir.rs  sample_gentle.json  sample_gentle_x6.json  sample_harsh.json
crates/lbm-cli/examples/dispersed_seeding/orders/: ORDER_dispersed_seeding.md  ORDER_dispersed_seeding_v2.md  ORDER_dispersed_seeding_v3_lowmach.md
crates/lbm-cli/src/: capabilities.rs  gallery.rs  main.rs  manifest.rs  mcp.rs  output.rs  render.rs  report.rs  runner.rs  scaleup.rs  schema.rs  sweep.rs  validate.rs  verify.rs
crates/lbm-cli/tests/: capabilities_drift_guard.rs  capabilities_verify.rs  cli_mcp_contracts.rs  g2_fieldkind.rs  mcp_async_e2e.rs  schema_bioprocess.rs  validate_bioprocess.rs
crates/lbm-core/: Cargo.toml
crates/lbm-core/examples/: bench_backends.rs  bench_gpu.rs  bench_mlups.rs  bench_mpi.rs  bench_stirred.rs  mpi_t13.rs  probe_equivariance.rs  probe_f32_accuracy.rs  probe_flux_profile.rs  probe_mcmp.rs  probe_phase8.rs  probe_pressure_channel.rs  probe_re400.rs  probe_shanchen.rs  probe_spec_fixes.rs  probe_state_hash.rs  probe_steady.rs  probe_tgv_order.rs
crates/lbm-core/src/: backend.rs  backend_simd.rs  bench_regression.rs  bouzidi.rs  bubble_forces.rs  bubbles.rs  cells.rs  collision.rs  credibility.rs  damage.rs  dist.rs  divergence.rs  domain.rs  fields.rs  free_surface.rs  geometry.rs  halo.rs  hybrid_gas.rs  kernels.rs  kla.rs  lattice.rs  les.rs  lib.rs  materials.rs  microcarrier.rs  multiphase.rs  oxygen.rs  params.rs  particles.rs  pbm.rs  phase_field.rs  qoi.rs  reaction.rs  real.rs  rotating_ibm.rs  scalar.rs  scaleup.rs  sim.rs  solver.rs  sparger.rs  (+6 more)
crates/lbm-core/src/compat/: domain.rs  lattice.rs  mod.rs  multiphase.rs  real.rs  rotor.rs  sim.rs
crates/lbm-core/src/gpu/: backend.rs  mod.rs  solver.rs  wgsl.rs
crates/lbm-core/tests/: accuracy_audit.rs  accuracy_audit_bouzidi.rs  accuracy_audit_bouzidi_mass.rs  accuracy_audit_bouzidi_moving.rs  accuracy_audit_bouzidi_probe.rs  accuracy_audit_cumulant.rs  accuracy_audit_drift_items.rs  accuracy_audit_gauntlet.rs  accuracy_audit_ibm.rs  accuracy_audit_init_ringing.rs  accuracy_audit_lattice_anisotropy.rs  accuracy_audit_modes.rs  accuracy_audit_modes_3d.rs  accuracy_audit_particles.rs  accuracy_audit_probe.rs  accuracy_audit_probe_galilean.rs  accuracy_audit_rotor.rs  accuracy_audit_sc_gamma_sl.rs  accuracy_audit_sc_pressure_tensor.rs  accuracy_audit_sc_rho_positivity.rs  accuracy_audit_sc_sigma_R.rs  accuracy_audit_sources.rs  accuracy_audit_stability_envelope.rs  accuracy_audit_streaming.rs  backend_simd_equiv.rs  bcfd_046_sparger_injection.rs  bioprocess_phase_field.rs  body_force_field.rs  boundary_input_validation.rs  bouzidi.rs  cumulant_acceptance.rs  cumulant_holdout.rs  d3q19_smoke.rs  d3q27_open_bc.rs  d3q27_open_metamorphic.rs  d3q27_smoke.rs  d5_long_horizon.rs  d5_soak_10m.rs  face_patch_smoke.rs  g2_analytic_strain.rs  (+75 more)
crates/lbm-core/tests/common/: gci.rs  metrics.rs  mod.rs  tgv_analysis.rs
crates/lbm-core2/: Cargo.toml
crates/lbm-core2/examples/: bench_backends.rs  bench_gpu.rs  bench_mpi.rs  mpi_t13.rs
crates/lbm-core2/src/: backend.rs  backend_simd.rs  dist.rs  fields.rs  halo.rs  kernels.rs  lattice.rs  lib.rs  params.rs  real.rs  solver.rs  subdomain.rs
crates/lbm-core2/src/compat/: lattice.rs  mod.rs  multiphase.rs  sim.rs
crates/lbm-core2/src/gpu/: backend.rs  wgsl.rs
crates/lbm-core2/tests/: backend_simd_equiv.rs  d3q19_smoke.rs  smoke_conservation.rs  smoke_couette.rs  smoke_poiseuille.rs  smoke_tgv.rs  t13_adversarial.rs  t13_split_invariance.rs  t14_backend_equiv.rs  t15_3d.rs  v1_match.rs  validation_cavity.rs  validation_channel.rs  validation_conservation.rs  validation_contact_angle.rs  validation_cylinder.rs  validation_multiphase.rs  validation_open_bc.rs  validation_outflow.rs  validation_robustness.rs  validation_rt.rs  validation_tgv.rs
crates/lbm-core2/tests/common/: mod.rs
crates/lbm-gpu-proto/: Cargo.toml
crates/lbm-gpu-proto/src/: gpu.rs  hostinit.rs  main.rs  shader.wgsl
crates/lbm-scenario/: Cargo.toml
crates/lbm-scenario/src/: bioprocess.rs  lib.rs  qoi_schema.rs  sweep.rs  units.rs
crates/lbm-scenario/tests/: bioprocess_parse.rs  bioprocess_units.rs  scenario_schema_fuzz.rs  units_extension.rs
crates/lbm-wasm/: Cargo.toml
crates/lbm-wasm/src/: lib.rs
crates/lbm-wasm/test-support/minicov-stub/: Cargo.toml
crates/lbm-wasm/test-support/minicov-stub/src/: lib.rs
docs/: AGENT_MODE_DESIGN.md  ARCHITECTURE_V2.md  BENCH_COMPARISON_DRAFT.md  BIOPROCESS_PIVOT.md  CLUSTER_OPTIONS.md  CLUSTER_RUNBOOK.md  COMPETITIVE_SPEC.md  CREDIBILITY_BIOPROCESS.md  DISPERSED_DEPOSITION.md  GPU_EVALUATION.md  HANDOFF-PM-2026-07-06.md  HANDOFF-PM-2026-07-07.md  HPC_SCALING.md  KERNEL_EXTENSION_POINTS.md  LIMITATIONS.md  MODEL_RISK_MATRIX.md  MPI_GUIDE.md  MULTIPHASE_DESIGN.md  PERFORMANCE.md  PHYSICS.md  PLAN.md  REQ_STIRRED_REACTOR.draft.md  REQ_STIRRED_REACTOR.md  REQ_STIRRED_REACTOR.review.md  REVIEW_2026-07-05.md  REVIEW_2026-07-05_2.md  SOLVER_IMPROVEMENT_SPEC.md  SPEC_BIOPROCESS_CORE.md  T15_5_CAVITY3D_REFERENCE.md  VALIDATION.md  VALIDATION_BIOPROCESS.md  VV_BACKEND_PRECISION_AUDIT.md  VV_CLAIM_STATUS.md  VV_FALSE_ASSURANCE_FINDINGS.md  VV_FSI_AUDIT.md  VV_MULTIPHASE_FINDINGS.md  VV_MUTATION_PLAN.md  VV_REPORT_TEMPLATE.md  VV_SCENARIO_CLI_AUDIT.md  VV_TRACEABILITY.md  (+3 more)
docs/archive/: HANDOFF-PM-2026-07-07.md
scripts/: bench_mpi.sh  sync-tests.sh  test_mpi.sh
scripts/spec-experiments/: Cargo.toml
scripts/spec-experiments/src/: main.rs
web/: README.md  TESTING_NOTES.md  index.html  package-lock.json  package.json  tsconfig.json
(+195 files in other folders)
