[workspace]
resolver = "2"
members = ["crates/lbm-core"]
# lbm-wasm builds standalone (wasm-pack, no rayon); excluded so native
# `cargo test` never depends on the wasm toolchain.
exclude = ["crates/lbm-wasm"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[profile.release]
lto = "thin"
codegen-units = 1

# テストを release でも高速ビルドしつつ実行速度を確保
[profile.release.package."*"]
opt-level = 3
