[workspace]
resolver = "2"
members = ["crates/lbm-core", "crates/lbm-core2", "crates/lbm-scenario", "crates/lbm-cli"]
# lbm-wasm builds standalone (wasm-pack, no rayon); excluded so native
# `cargo test` never depends on the wasm toolchain.
# lbm-gpu-proto is the standalone Phase 9c wgpu evaluation prototype; excluded
# so the workspace never depends on wgpu (run it from inside its directory).
exclude = ["crates/lbm-wasm", "crates/lbm-gpu-proto"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[profile.release]
lto = "thin"
codegen-units = 1

# テストを release でも高速ビルドしつつ実行速度を確保
[profile.release.package."*"]
opt-level = 3
