[package]
name = "lbm-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "LBMFlow scenario runner CLI (agent mode)"

[[bin]]
name = "lbm"
path = "src/main.rs"

[dependencies]
lbm-core2 = { path = "../lbm-core2" }
lbm-scenario = { path = "../lbm-scenario" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
png = "0.17"
anyhow = "1"
