[package]
name = "lbm-cli"
version = "0.2.0-bioprocess.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "LBMFlow bioprocess-CFD CLI (scenario runner + MCP; agent mode)"

[[bin]]
name = "lbm"
path = "src/main.rs"

[[example]]
name = "dispersed_seeding"
path = "examples/dispersed_seeding/main.rs"

[dependencies]
lbm-core = { path = "../lbm-core" }
lbm-scenario = { path = "../lbm-scenario" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
png = "0.17"
anyhow = "1"

[features]
gpu = ["lbm-core/gpu", "lbm-scenario/gpu"]
mpi = ["lbm-core/mpi"]
geometry-import = ["lbm-core/geometry-import", "lbm-scenario/geometry-import"]
