[package]
name = "lbm-core"
description = "Lattice Boltzmann core: dimension/lattice/backend/subdomain orthogonal abstractions (V2 architecture; includes the V1-compatible compat facade)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = { version = "1.10", optional = true }
# GPU backend deps (feature `gpu`; wgpu pinned to the major verified by
# crates/lbm-gpu-proto on this machine).
wgpu = { version = "26", optional = true }
bytemuck = { version = "1", optional = true }
pollster = { version = "0.4", optional = true }
futures-intrusive = { version = "0.5", optional = true }
# MPI distribution (feature `mpi`; rsmpi needs an MPI toolchain — `mpicc`
# on PATH — at build time, so the default graph never depends on it).
mpi = { version = "0.8", optional = true }

[features]
default = ["parallel"]
parallel = ["dep:rayon"]
# wgpu compute backend (D2Q9 f32). Off by default so the standard build/test
# graph never depends on wgpu; CI runs `--features gpu` separately on GPU
# hosts (docs/GPU_EVALUATION.md adoption condition (b)).
gpu = ["dep:wgpu", "dep:bytemuck", "dep:pollster", "dep:futures-intrusive"]
# MPI halo exchange + distributed diagnostics (docs/MPI_GUIDE.md). Off by
# default: requires a native MPI installation (see scripts/test_mpi.sh).
mpi = ["dep:mpi"]
mf-interim = []
geometry-import = []

[[example]]
name = "bench_gpu"
required-features = ["gpu"]

[[example]]
name = "mpi_t13"
required-features = ["mpi"]

[[example]]
name = "bench_mpi"
required-features = ["mpi"]

[dev-dependencies]
approx = "0.5"
