[package]
name = "lbm-scenario"
version = "0.2.0-bioprocess.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Scenario JSON schema (legacy + bioprocess) shared by the CLI, MCP server and GUI presets"

[dependencies]
lbm-core = { path = "../lbm-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
gpu = ["lbm-core/gpu"]
