[package]
name = "lbm-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "wasm-bindgen bridge exposing lbm-core to the browser GUI"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lbm-core = { path = "../lbm-core", default-features = false }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
