[package]
name = "lbm-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "wasm-bindgen bridge exposing lbm-core to the browser GUI"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# default-features = false: no rayon in the wasm build (single-threaded
# runtime); the compat facade then runs the serial CpuScalar path.
lbm-core = { path = "../lbm-core", default-features = false }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
js-sys = "0.3"
wasm-bindgen-test = "0.3"

[patch.crates-io]
minicov = { path = "test-support/minicov-stub" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = 3
lto = true
