# Validity-verification experiments for docs/SOLVER_IMPROVEMENT_SPEC.md (E2-E8).
# Run: cd scripts/spec-experiments && cargo run --release e2   (e2|e3|e4|e5|e6|e7|e8). Paths translated at main integration: lbm_core2->lbm_core, V1->compat
# Standalone crate outside the workspace (detached from the parent via [workspace]).
[package]
name = "spec-experiments"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
lbm-core = { path = "../../crates/lbm-core" }

[workspace]
